Now sends event to RabbitMQ for digital registered letters. New endpoint for fetching recipient data that will be used by Digital-Registered-Letter when consuming the send event. New minor version.
