# src/main/java/se/sundsvall/postportalservice/integration/rabbitmq/model/SendRegisteredLetterEvent.java
@@ -1,0 +1,4 @@
+package se.sundsvall.postportalservice.integration.rabbitmq.model;
+
+public record SendRegisteredLetterEvent(String municipalityId, String recipientId) {
+}
